* OTH#0000 Increase line spacing of list view, add space after icon in tree views
* FEA#8643 Allow to open in new tab Many2One and Reference
* FEA#8643 Allow to edit Many2One from tree view
* BUG#7227 Fix view changes in processes

Version 4.6.3 - 2018-04-03
* Bug fixes (see mercurial logs for details)

Version 4.6.2 - 2018-03-15
* Bug fixes (see mercurial logs for details)

* FIX#8605 Fix extra-data selection readonly
* FEA#8297 iteration on theme
* FEA#8296 Reduce menu width for big screens

Version 4.6.1 - 2018-01-04
* Bug fixes (see mercurial logs for details)

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Allow to export model and record name of Reference fields
* Re-position buttons on Binary/Image widget
* Set focus on first visible input when modal is shown
* Improve treeview headers
* Add keyboard shortcuts
* Update states of both toolbar and menu
* Improve toolbar order
* Use login details in title

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Manage help attribute on tree views
* Manage color attribute on graph view
* Add support for size on Many2Many
* Allow to show plain text in password field

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Add PYSON Widget
* Add CSV Import/Export
* Manage translated field
* Add favorites menu
* Show records names in wizard title
* Add support for datetime_field to Many2One, Reference
* Add calendar view
* Move info-bar to the top
* Add noeval to PYSONDecoder
* Add support for pyson_order on action window
* Make datetimepicker locale aware
* Restore tab default order when no manual change
* Add support for column sorting
* Manage confirm attribute on buttons
* Call autocompletion when setting record value
* Limit readonly state for xxx2Many
* Simplify login with single database 
* Show records names in relate window title
* Add support for count on Action Window Domains
* Manage custom login process
* Add erase on Many2One