@@ -2,6 +2,9 @@
  * Off Canvas
  * --------------------------------------------------
  */
+.main-screen-offcanvas{
+    width: 100%;
+ }
 @media screen and (max-width: 991px) {
   .row-offcanvas {
     position: relative;
@@ -10,56 +13,19 @@
             transition: all .25s ease-out;
   }
 
-  .row-offcanvas-right {
-    right: 0;
-  }
-
-  .row-offcanvas-left {
-    left: 0;
-  }
-
-  .row-offcanvas-right
-  .sidebar-offcanvas {
-    right: calc(-50% + 7px);
-  }
-
-  .row-offcanvas-left
-  .sidebar-offcanvas {
-    left: calc(-50% + 7.5px);
-  }
-
-  .row-offcanvas-right.active {
-    right: calc(50% + 7.5px);
-  }
-
-  .row-offcanvas-left.active {
-    left: calc(50% + 7.5px);
+  .row-offcanvas.active .main-screen-offcanvas {
+    width: 50%;
   }
 
   .sidebar-offcanvas {
-    position: absolute;
     top: 0;
     width: 50%;
   }
 }
 
 @media screen and (max-width: 479px) {
-  .row-offcanvas-right
-  .sidebar-offcanvas {
-    right: calc(-100% + 15px);
-  }
-
-  .row-offcanvas-left
-  .sidebar-offcanvas {
-    left: calc(-100% + 15px);
-  }
-
-  .row-offcanvas-right.active {
-    right: calc(100% + 15px);
-  }
-
-  .row-offcanvas-left.active {
-    left: calc(100% + 15px);
+  .row-offcanvas.active .main-screen-offcanvas {
+    width: 0%;
   }
 
   .sidebar-offcanvas {
