@@ -4,47 +4,19 @@
     -webkit-transition: all .25s ease-out;
          -o-transition: all .25s ease-out;
             transition: all .25s ease-out;
-  }
+     }
+    .row-offcanvas.active {
+        .main-screen-offcanvas {
+        width: 85%;
 
-  .row-offcanvas-left {
-    left: 0;
-  }
-
-  .row-offcanvas-left
-  .sidebar-offcanvas {
-
-    left: calc(-15%);
-
-    @media (max-width: 1400px){
-      left: calc(-25%);
+        @media (max-width: 1400px){
+            width: 75%;
+        }
     }
-  }
-
-  .main-screen-offcanvas {
-
-    width: 85%;
-
-    @media (max-width: 1400px){
-      width: 75%;
-    }
-  }
-
-  .row-offcanvas-left.active {
-
-    left: calc(15%);
-
-    @media (max-width: 1400px){
-      left: calc(25%)
-    }
-  }
-
-  .main-screen-offcanvas.full_mode {
-    width: 100%;
   }
 
 
   .sidebar-offcanvas {
-    position: absolute;
     top: 0;
 
     width: 15%;
